--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <div class="result-value">
                             <span id="co2-capture">32.0</span> grams
                         </div>
-                        <small>Formula: (CO₂ / 1000) × 80g</small>
+                        <small>Formula: (CO₂ / 1000) × 0.05 × 1.96 g</small>
                     </div>
                     
                     <div class="chart-container">
