--- a/index.html
+++ b/index.html
@@ -208,6 +208,10 @@
                                 <span class="metric-label">Fuel Produced:</span>
                                 <span class="metric-value" id="total-fuel">80.0 mL</span>
                             </div>
+                             <div class="metric">Add commentMore actions
+                                <span class="metric-label">Environmental Score:</span>
+                                <span class="metric-value" id="env-score">7.5/10</span>
+                            </div>
                         </div>
                     </div>
                 </div>
